WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246864
[web-animations] setting iterationComposite should invalidate the effect
https://bugs.webkit.org/show_bug.cgi?id=246864
Summary
[web-animations] setting iterationComposite should invalidate the effect
Antoine Quint
Reported
2022-10-21 10:30:47 PDT
We have some test failures due to not invalidating the effect when KeyframeEffect.iterationComposite changes, specifically in: web-animations/animation-model/keyframe-effects/effect-value-context-filling.html web-animations/interfaces/KeyframeEffect/iterationComposite.html
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-10-21 10:34:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5635
EWS
Comment 2
2022-10-21 22:49:37 PDT
Committed
255865@main
(a2043cb59ed0): <
https://commits.webkit.org/255865@main
> Reviewed commits have been landed. Closing PR #5635 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-10-21 22:50:19 PDT
<
rdar://problem/101454060
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug