[web-animations] setting iterationComposite should invalidate the effect https://bugs.webkit.org/show_bug.cgi?id=246864

Reviewed by Dean Jackson.

Since iterationComposite influences how the effect value is computed, we must
invalidate the effect when it's set to a new value.

* LayoutTests/imported/w3c/web-platform-tests/web-animations/animation-model/keyframe-effects/effect-value-context-filling-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/web-animations/interfaces/KeyframeEffect/iterationComposite-expected.txt:
* Source/WebCore/animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::setIterationComposite):
* Source/WebCore/animation/KeyframeEffect.h:
(WebCore::KeyframeEffect::setIterationComposite): Deleted.

Canonical link: https://commits.webkit.org/255865@main